--- a/src/assets/less/elements/icons.less
+++ b/src/assets/less/elements/icons.less
@@ -1,5 +1,21 @@
 /** icons.less */
 
+/*
+ *   Notes
+ *   =====
+ *
+ *   We wish to replace our current icon font with SVG icons.
+ *   Therefore, we need to re-draw the icons we need in order to unify
+ *   their style. We are planning to have three versions of each
+ *   icon: small (16px), medium (32-64px) and large (above 64px).
+ *   These versions will vary in detail, with smaller icons being
+ *   simple and larger icons bein more complex. Pretty much like:
+ *
+ *   http://svgpocketguide.com/book/
+ *
+ *   We wish to work with Stefan Dziallas of iconwerk.com
+ */
+
 // block
 // =====
 
