--- a/src/assets/less/elements/menu.less
+++ b/src/assets/less/elements/menu.less
@@ -13,24 +13,25 @@
 // ========
 
 .menu__item {
-    margin: 0;
-}
-
-.menu > .menu__item {
+    
     border-top: @color-main-23 1px solid;
-}
-
-.menu > .menu__item:first-child {
-    border: 0;
+    margin: 0;
+    font-weight: bold;
+    
+    &:first-child {
+        border: 0;
+    }
+    
 }
 
 .menu__link {
     
+    cursor: pointer;
     display: block;
-    font-weight: bold;
-    padding: .5rem 3.5rem .5rem 1rem;
+    padding: .5rem 1rem;
     position: relative;
-    
+    text-decoration: none;
+
     &:active,
     &:link,
     &:visited {
@@ -43,7 +44,13 @@
     
 }
 
-// nested menus
+// nested elements
+// ===============
+
+// menu-nesting is limited to four levels.
+// while this is quite ugly, there is no better solution.
+
+// nesting-level 2
 
 .menu .menu {
     border: 0;
@@ -52,19 +59,69 @@
 
 .menu .menu .menu__item {
     border: 0;
-}
-
-.menu .menu .menu__link {
     font-weight: normal;
 }
 
+// nesting-level 3
+
+.menu .menu .menu {
+    padding-left: 2rem;
+}
+
 .menu .menu .menu .menu__link {
-    padding-left: 2.5rem;
+    margin-left: -2rem;
+    padding-left: 3rem;
+}
+
+// nesting-level 4
+
+.menu .menu .menu .menu .menu__link {
+    margin-left: -4rem;
+    padding-left: 6rem;
 }
 
 // modifiers
 // =========
 
-.menu__item--active > :first-child {
-    background: @color-main-23;
+// active menu items
+// (can be either a .menu__item or .menu__link)
+
+.menu .is--active {
+    
+    position: relative;
+    
+    &,
+    .menu__link:link,
+    .menu__link:visited,
+    .menu__link:hover {
+        background: @color-main-8;
+        color: @color-white;
+        font-weight: bold;
+    }
+    
+}
+
+// an active menu item can display a pointer
+// to the left or right
+
+.menu--pointLeft .is--active::after,
+.menu--pointRight .is--active::after {
+    background: @color-main-8;
+    content: ' ';
+    display: block;
+    height: 1rem;
+    position: absolute;
+    top: 50%;
+    transform-origin: center;
+    width: 1rem;
+}
+
+.menu--pointLeft .is--active::after {
+    left: 0;
+    transform: translate(-50% ,-50%) rotate(45deg);
+}
+
+.menu--pointRight .is--active::after {
+    right: 0;
+    transform: translate(50% ,-50%) rotate(45deg);
 }
