--- a/src/assets/less/elements/tabs.less
+++ b/src/assets/less/elements/tabs.less
@@ -17,12 +17,10 @@
 }
 
 .tabs__menu {
-    
-    border: 0;
+    background: @color-main-25;
     border-bottom: @color-main-23 1px solid;
     border-radius: 0;
-    
-    background: @color-main-25;
+    border: 0;
     color: @color-main-8;
     display: table;
     position: relative;
@@ -44,6 +42,26 @@
     
     &:last-child {
         border-right: 0;
+    }
+    
+}
+
+.tabs__item--active {
+    
+    background: #fff;
+    
+    // add a white line to cover up the
+    // bottom border
+
+    &::after {
+        background: #fff;
+        bottom: -1px;
+        content: ' ';
+        height: 1px;
+        left: 0;
+        position: absolute;
+        right: 0;
+        z-index: 10;
     }
     
 }
@@ -87,32 +105,18 @@
 
 }
 
-.tabs__item--active {
-    background: #fff;
-}
-
-// add a white line to cover up the
-// bottom border
-
-.tabs__item--active::after {
-    background: #fff;
-    bottom: -1px;
-    content: ' ';
-    height: 1px;
-    left: 0;
-    position: absolute;
-    right: 0;
-    z-index: 10;
-}
-
 // modifiers
 // =========
 
 // large tabs menu
 
-.tabs__menu--large .tabs__link {
-    font-size: 1.5rem;
-    padding: 1.5rem 1rem;
+.tabs__menu--large {
+    
+    .tabs__link {
+        font-size: 1.5rem;
+        padding: 1.5rem 1rem;
+    }
+    
 }
 
 // subtle tabs menu
