removed properitary color variables

--- a/src/assets/less/theme/colors.less
+++ b/src/assets/less/theme/colors.less
@@ -125,17 +125,12 @@
 @yellow-24: #ffffff;    @purple-24: #dfd5ff;    @gray-24: #f6f5f4;
 @yellow-25: #ffffff;    @purple-25: #e9e1ff;    @gray-25: #faf9f7;
 
-// other color variables
+// achromatic color variables
 
-@color-black:              #111;
-@color-gold:               #eac310;
-@color-price:              @red-15;
-@color-transparent:        rgba(255,255,255,0);
-@color-white:              white;
+@color-black:           #111;
+@color-transparent:     rgba(255,255,255,0);
+@color-white:           white;
 
-// deprecated
+// other colors
 
-@color-pharmacy:           #fe0011;
-@color-prescriptionPink-1: #bb4473;
-@color-prescriptionPink-2: #e7aac0;
-@color-prescriptionPink-3: #f6d5e2;
+@color-gold:            #eac310;
