tweaked layout utilities

--- a/src/assets/less/utilities/spacing.less
+++ b/src/assets/less/utilities/spacing.less
@@ -15,12 +15,8 @@
     .m-r-@{i}       { margin-right:  @product !important; }
     .m-b-@{i}       { margin-bottom: @product !important; }
     .m-l-@{i}       { margin-left:   @product !important; }
-    .m-tr-@{i}      { margin-top:    @product !important; margin-right:  @product !important; }
-    .m-br-@{i}      { margin-bottom: @product !important; margin-right:  @product !important; }
-    .m-bl-@{i}      { margin-bottom: @product !important; margin-left:   @product !important; }
     .m-tb-@{i}      { margin-top:    @product !important; margin-bottom: @product !important; }
     .m-lr-@{i}      { margin-left:   @product !important; margin-right:  @product !important; }
-    .m-tl-@{i}      { margin-top:    @product !important; margin-left:   @product !important; }
 
     // margin (negative values)
 
@@ -29,12 +25,8 @@
     .m-r-neg-@{i}   { margin-right:  @product * -1 !important; }
     .m-b-neg-@{i}   { margin-bottom: @product * -1 !important; }
     .m-l-neg-@{i}   { margin-left:   @product * -1 !important; }
-    .m-tr-neg-@{i}  { margin-top:    @product * -1 !important; margin-right:  @product * -1 !important; }
-    .m-br-neg-@{i}  { margin-bottom: @product * -1 !important; margin-right:  @product * -1 !important; }
-    .m-bl-neg-@{i}  { margin-bottom: @product * -1 !important; margin-left:   @product * -1 !important; }
     .m-tb-neg-@{i}  { margin-top:    @product * -1 !important; margin-bottom: @product * -1 !important; }
     .m-lr-neg-@{i}  { margin-left:   @product * -1 !important; margin-right:  @product * -1 !important; }
-    .m-tl-neg-@{i}  { margin-top:    @product * -1 !important; margin-left:   @product * -1 !important; }
 
     // padding
 
@@ -43,18 +35,23 @@
     .p-r-@{i}       { padding-right:  @product !important; }
     .p-b-@{i}       { padding-bottom: @product !important; }
     .p-l-@{i}       { padding-left:   @product !important; }
-    .p-tr-@{i}      { padding-top:    @product !important; padding-right:  @product !important; }
-    .p-br-@{i}      { padding-bottom: @product !important; padding-right:  @product !important; }
-    .p-bl-@{i}      { padding-bottom: @product !important; padding-left:   @product !important; }
     .p-tb-@{i}      { padding-top:    @product !important; padding-bottom: @product !important; }
     .p-lr-@{i}      { padding-left:   @product !important; padding-right:  @product !important; }
-    .ptl-@{i}       { padding-top:    @product !important; padding-left:   @product !important; }
 
 }
 .generate_margin_padding(10);
 
-.m-0 { margin: 0 !important; }
-.p-0 { padding: 0 !important; }
+.m-0   { margin: 0 !important; }
+.m-t-0 { margin-top: 0 !important; }
+.m-r-0 { margin-right: 0 !important; }
+.m-b-0 { margin-bottom: 0 !important; }
+.m-l-0 { margin-left: 0 !important; }
+
+.p-0   { padding: 0 !important; }
+.p-t-0 { padding-top: 0 !important; }
+.p-r-0 { padding-right: 0 !important; }
+.p-b-0 { padding-bottom: 0 !important; }
+.p-l-0 { padding-left: 0 !important; }
 
 .m-lr-auto {
     margin-right: auto !important;
