added font style utilities

--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -14482,6 +14482,12 @@ body {
 .fw-bold {
   font-weight: bold !important;
 }
+.fst-no {
+  font-style: normal !important;
+}
+.fst-it {
+  font-style: italic !important;
+}
 .tt-cp {
   text-transform: capitalize !important;
 }
