--- a/src/assets/less/utilities/typography.less
+++ b/src/assets/less/utilities/typography.less
@@ -46,6 +46,11 @@
 .fw-normal { font-weight: normal !important; }
 .fw-bold   { font-weight: bold !important; }
 
+// font styles
+
+.fst-no { font-style: normal !important; }
+.fst-it { font-style: italic !important; }
+
 // text transform
 
 .tt-cp   { text-transform: capitalize !important; }
