--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -11903,6 +11903,696 @@ body {
   padding-left: 5rem !important;
   padding-right: 5rem !important;
 }
+.m-11 {
+  margin: 5.5rem !important;
+}
+.m-t-11 {
+  margin-top: 5.5rem !important;
+}
+.m-r-11 {
+  margin-right: 5.5rem !important;
+}
+.m-b-11 {
+  margin-bottom: 5.5rem !important;
+}
+.m-l-11 {
+  margin-left: 5.5rem !important;
+}
+.m-tb-11 {
+  margin-top: 5.5rem !important;
+  margin-bottom: 5.5rem !important;
+}
+.m-lr-11 {
+  margin-left: 5.5rem !important;
+  margin-right: 5.5rem !important;
+}
+.m-neg-11 {
+  margin: -5.5rem !important;
+}
+.m-t-neg-11 {
+  margin-top: -5.5rem !important;
+}
+.m-r-neg-11 {
+  margin-right: -5.5rem !important;
+}
+.m-b-neg-11 {
+  margin-bottom: -5.5rem !important;
+}
+.m-l-neg-11 {
+  margin-left: -5.5rem !important;
+}
+.m-tb-neg-11 {
+  margin-top: -5.5rem !important;
+  margin-bottom: -5.5rem !important;
+}
+.m-lr-neg-11 {
+  margin-left: -5.5rem !important;
+  margin-right: -5.5rem !important;
+}
+.p-11 {
+  padding: 5.5rem !important;
+}
+.p-t-11 {
+  padding-top: 5.5rem !important;
+}
+.p-r-11 {
+  padding-right: 5.5rem !important;
+}
+.p-b-11 {
+  padding-bottom: 5.5rem !important;
+}
+.p-l-11 {
+  padding-left: 5.5rem !important;
+}
+.p-tb-11 {
+  padding-top: 5.5rem !important;
+  padding-bottom: 5.5rem !important;
+}
+.p-lr-11 {
+  padding-left: 5.5rem !important;
+  padding-right: 5.5rem !important;
+}
+.m-12 {
+  margin: 6rem !important;
+}
+.m-t-12 {
+  margin-top: 6rem !important;
+}
+.m-r-12 {
+  margin-right: 6rem !important;
+}
+.m-b-12 {
+  margin-bottom: 6rem !important;
+}
+.m-l-12 {
+  margin-left: 6rem !important;
+}
+.m-tb-12 {
+  margin-top: 6rem !important;
+  margin-bottom: 6rem !important;
+}
+.m-lr-12 {
+  margin-left: 6rem !important;
+  margin-right: 6rem !important;
+}
+.m-neg-12 {
+  margin: -6rem !important;
+}
+.m-t-neg-12 {
+  margin-top: -6rem !important;
+}
+.m-r-neg-12 {
+  margin-right: -6rem !important;
+}
+.m-b-neg-12 {
+  margin-bottom: -6rem !important;
+}
+.m-l-neg-12 {
+  margin-left: -6rem !important;
+}
+.m-tb-neg-12 {
+  margin-top: -6rem !important;
+  margin-bottom: -6rem !important;
+}
+.m-lr-neg-12 {
+  margin-left: -6rem !important;
+  margin-right: -6rem !important;
+}
+.p-12 {
+  padding: 6rem !important;
+}
+.p-t-12 {
+  padding-top: 6rem !important;
+}
+.p-r-12 {
+  padding-right: 6rem !important;
+}
+.p-b-12 {
+  padding-bottom: 6rem !important;
+}
+.p-l-12 {
+  padding-left: 6rem !important;
+}
+.p-tb-12 {
+  padding-top: 6rem !important;
+  padding-bottom: 6rem !important;
+}
+.p-lr-12 {
+  padding-left: 6rem !important;
+  padding-right: 6rem !important;
+}
+.m-13 {
+  margin: 6.5rem !important;
+}
+.m-t-13 {
+  margin-top: 6.5rem !important;
+}
+.m-r-13 {
+  margin-right: 6.5rem !important;
+}
+.m-b-13 {
+  margin-bottom: 6.5rem !important;
+}
+.m-l-13 {
+  margin-left: 6.5rem !important;
+}
+.m-tb-13 {
+  margin-top: 6.5rem !important;
+  margin-bottom: 6.5rem !important;
+}
+.m-lr-13 {
+  margin-left: 6.5rem !important;
+  margin-right: 6.5rem !important;
+}
+.m-neg-13 {
+  margin: -6.5rem !important;
+}
+.m-t-neg-13 {
+  margin-top: -6.5rem !important;
+}
+.m-r-neg-13 {
+  margin-right: -6.5rem !important;
+}
+.m-b-neg-13 {
+  margin-bottom: -6.5rem !important;
+}
+.m-l-neg-13 {
+  margin-left: -6.5rem !important;
+}
+.m-tb-neg-13 {
+  margin-top: -6.5rem !important;
+  margin-bottom: -6.5rem !important;
+}
+.m-lr-neg-13 {
+  margin-left: -6.5rem !important;
+  margin-right: -6.5rem !important;
+}
+.p-13 {
+  padding: 6.5rem !important;
+}
+.p-t-13 {
+  padding-top: 6.5rem !important;
+}
+.p-r-13 {
+  padding-right: 6.5rem !important;
+}
+.p-b-13 {
+  padding-bottom: 6.5rem !important;
+}
+.p-l-13 {
+  padding-left: 6.5rem !important;
+}
+.p-tb-13 {
+  padding-top: 6.5rem !important;
+  padding-bottom: 6.5rem !important;
+}
+.p-lr-13 {
+  padding-left: 6.5rem !important;
+  padding-right: 6.5rem !important;
+}
+.m-14 {
+  margin: 7rem !important;
+}
+.m-t-14 {
+  margin-top: 7rem !important;
+}
+.m-r-14 {
+  margin-right: 7rem !important;
+}
+.m-b-14 {
+  margin-bottom: 7rem !important;
+}
+.m-l-14 {
+  margin-left: 7rem !important;
+}
+.m-tb-14 {
+  margin-top: 7rem !important;
+  margin-bottom: 7rem !important;
+}
+.m-lr-14 {
+  margin-left: 7rem !important;
+  margin-right: 7rem !important;
+}
+.m-neg-14 {
+  margin: -7rem !important;
+}
+.m-t-neg-14 {
+  margin-top: -7rem !important;
+}
+.m-r-neg-14 {
+  margin-right: -7rem !important;
+}
+.m-b-neg-14 {
+  margin-bottom: -7rem !important;
+}
+.m-l-neg-14 {
+  margin-left: -7rem !important;
+}
+.m-tb-neg-14 {
+  margin-top: -7rem !important;
+  margin-bottom: -7rem !important;
+}
+.m-lr-neg-14 {
+  margin-left: -7rem !important;
+  margin-right: -7rem !important;
+}
+.p-14 {
+  padding: 7rem !important;
+}
+.p-t-14 {
+  padding-top: 7rem !important;
+}
+.p-r-14 {
+  padding-right: 7rem !important;
+}
+.p-b-14 {
+  padding-bottom: 7rem !important;
+}
+.p-l-14 {
+  padding-left: 7rem !important;
+}
+.p-tb-14 {
+  padding-top: 7rem !important;
+  padding-bottom: 7rem !important;
+}
+.p-lr-14 {
+  padding-left: 7rem !important;
+  padding-right: 7rem !important;
+}
+.m-15 {
+  margin: 7.5rem !important;
+}
+.m-t-15 {
+  margin-top: 7.5rem !important;
+}
+.m-r-15 {
+  margin-right: 7.5rem !important;
+}
+.m-b-15 {
+  margin-bottom: 7.5rem !important;
+}
+.m-l-15 {
+  margin-left: 7.5rem !important;
+}
+.m-tb-15 {
+  margin-top: 7.5rem !important;
+  margin-bottom: 7.5rem !important;
+}
+.m-lr-15 {
+  margin-left: 7.5rem !important;
+  margin-right: 7.5rem !important;
+}
+.m-neg-15 {
+  margin: -7.5rem !important;
+}
+.m-t-neg-15 {
+  margin-top: -7.5rem !important;
+}
+.m-r-neg-15 {
+  margin-right: -7.5rem !important;
+}
+.m-b-neg-15 {
+  margin-bottom: -7.5rem !important;
+}
+.m-l-neg-15 {
+  margin-left: -7.5rem !important;
+}
+.m-tb-neg-15 {
+  margin-top: -7.5rem !important;
+  margin-bottom: -7.5rem !important;
+}
+.m-lr-neg-15 {
+  margin-left: -7.5rem !important;
+  margin-right: -7.5rem !important;
+}
+.p-15 {
+  padding: 7.5rem !important;
+}
+.p-t-15 {
+  padding-top: 7.5rem !important;
+}
+.p-r-15 {
+  padding-right: 7.5rem !important;
+}
+.p-b-15 {
+  padding-bottom: 7.5rem !important;
+}
+.p-l-15 {
+  padding-left: 7.5rem !important;
+}
+.p-tb-15 {
+  padding-top: 7.5rem !important;
+  padding-bottom: 7.5rem !important;
+}
+.p-lr-15 {
+  padding-left: 7.5rem !important;
+  padding-right: 7.5rem !important;
+}
+.m-16 {
+  margin: 8rem !important;
+}
+.m-t-16 {
+  margin-top: 8rem !important;
+}
+.m-r-16 {
+  margin-right: 8rem !important;
+}
+.m-b-16 {
+  margin-bottom: 8rem !important;
+}
+.m-l-16 {
+  margin-left: 8rem !important;
+}
+.m-tb-16 {
+  margin-top: 8rem !important;
+  margin-bottom: 8rem !important;
+}
+.m-lr-16 {
+  margin-left: 8rem !important;
+  margin-right: 8rem !important;
+}
+.m-neg-16 {
+  margin: -8rem !important;
+}
+.m-t-neg-16 {
+  margin-top: -8rem !important;
+}
+.m-r-neg-16 {
+  margin-right: -8rem !important;
+}
+.m-b-neg-16 {
+  margin-bottom: -8rem !important;
+}
+.m-l-neg-16 {
+  margin-left: -8rem !important;
+}
+.m-tb-neg-16 {
+  margin-top: -8rem !important;
+  margin-bottom: -8rem !important;
+}
+.m-lr-neg-16 {
+  margin-left: -8rem !important;
+  margin-right: -8rem !important;
+}
+.p-16 {
+  padding: 8rem !important;
+}
+.p-t-16 {
+  padding-top: 8rem !important;
+}
+.p-r-16 {
+  padding-right: 8rem !important;
+}
+.p-b-16 {
+  padding-bottom: 8rem !important;
+}
+.p-l-16 {
+  padding-left: 8rem !important;
+}
+.p-tb-16 {
+  padding-top: 8rem !important;
+  padding-bottom: 8rem !important;
+}
+.p-lr-16 {
+  padding-left: 8rem !important;
+  padding-right: 8rem !important;
+}
+.m-17 {
+  margin: 8.5rem !important;
+}
+.m-t-17 {
+  margin-top: 8.5rem !important;
+}
+.m-r-17 {
+  margin-right: 8.5rem !important;
+}
+.m-b-17 {
+  margin-bottom: 8.5rem !important;
+}
+.m-l-17 {
+  margin-left: 8.5rem !important;
+}
+.m-tb-17 {
+  margin-top: 8.5rem !important;
+  margin-bottom: 8.5rem !important;
+}
+.m-lr-17 {
+  margin-left: 8.5rem !important;
+  margin-right: 8.5rem !important;
+}
+.m-neg-17 {
+  margin: -8.5rem !important;
+}
+.m-t-neg-17 {
+  margin-top: -8.5rem !important;
+}
+.m-r-neg-17 {
+  margin-right: -8.5rem !important;
+}
+.m-b-neg-17 {
+  margin-bottom: -8.5rem !important;
+}
+.m-l-neg-17 {
+  margin-left: -8.5rem !important;
+}
+.m-tb-neg-17 {
+  margin-top: -8.5rem !important;
+  margin-bottom: -8.5rem !important;
+}
+.m-lr-neg-17 {
+  margin-left: -8.5rem !important;
+  margin-right: -8.5rem !important;
+}
+.p-17 {
+  padding: 8.5rem !important;
+}
+.p-t-17 {
+  padding-top: 8.5rem !important;
+}
+.p-r-17 {
+  padding-right: 8.5rem !important;
+}
+.p-b-17 {
+  padding-bottom: 8.5rem !important;
+}
+.p-l-17 {
+  padding-left: 8.5rem !important;
+}
+.p-tb-17 {
+  padding-top: 8.5rem !important;
+  padding-bottom: 8.5rem !important;
+}
+.p-lr-17 {
+  padding-left: 8.5rem !important;
+  padding-right: 8.5rem !important;
+}
+.m-18 {
+  margin: 9rem !important;
+}
+.m-t-18 {
+  margin-top: 9rem !important;
+}
+.m-r-18 {
+  margin-right: 9rem !important;
+}
+.m-b-18 {
+  margin-bottom: 9rem !important;
+}
+.m-l-18 {
+  margin-left: 9rem !important;
+}
+.m-tb-18 {
+  margin-top: 9rem !important;
+  margin-bottom: 9rem !important;
+}
+.m-lr-18 {
+  margin-left: 9rem !important;
+  margin-right: 9rem !important;
+}
+.m-neg-18 {
+  margin: -9rem !important;
+}
+.m-t-neg-18 {
+  margin-top: -9rem !important;
+}
+.m-r-neg-18 {
+  margin-right: -9rem !important;
+}
+.m-b-neg-18 {
+  margin-bottom: -9rem !important;
+}
+.m-l-neg-18 {
+  margin-left: -9rem !important;
+}
+.m-tb-neg-18 {
+  margin-top: -9rem !important;
+  margin-bottom: -9rem !important;
+}
+.m-lr-neg-18 {
+  margin-left: -9rem !important;
+  margin-right: -9rem !important;
+}
+.p-18 {
+  padding: 9rem !important;
+}
+.p-t-18 {
+  padding-top: 9rem !important;
+}
+.p-r-18 {
+  padding-right: 9rem !important;
+}
+.p-b-18 {
+  padding-bottom: 9rem !important;
+}
+.p-l-18 {
+  padding-left: 9rem !important;
+}
+.p-tb-18 {
+  padding-top: 9rem !important;
+  padding-bottom: 9rem !important;
+}
+.p-lr-18 {
+  padding-left: 9rem !important;
+  padding-right: 9rem !important;
+}
+.m-19 {
+  margin: 9.5rem !important;
+}
+.m-t-19 {
+  margin-top: 9.5rem !important;
+}
+.m-r-19 {
+  margin-right: 9.5rem !important;
+}
+.m-b-19 {
+  margin-bottom: 9.5rem !important;
+}
+.m-l-19 {
+  margin-left: 9.5rem !important;
+}
+.m-tb-19 {
+  margin-top: 9.5rem !important;
+  margin-bottom: 9.5rem !important;
+}
+.m-lr-19 {
+  margin-left: 9.5rem !important;
+  margin-right: 9.5rem !important;
+}
+.m-neg-19 {
+  margin: -9.5rem !important;
+}
+.m-t-neg-19 {
+  margin-top: -9.5rem !important;
+}
+.m-r-neg-19 {
+  margin-right: -9.5rem !important;
+}
+.m-b-neg-19 {
+  margin-bottom: -9.5rem !important;
+}
+.m-l-neg-19 {
+  margin-left: -9.5rem !important;
+}
+.m-tb-neg-19 {
+  margin-top: -9.5rem !important;
+  margin-bottom: -9.5rem !important;
+}
+.m-lr-neg-19 {
+  margin-left: -9.5rem !important;
+  margin-right: -9.5rem !important;
+}
+.p-19 {
+  padding: 9.5rem !important;
+}
+.p-t-19 {
+  padding-top: 9.5rem !important;
+}
+.p-r-19 {
+  padding-right: 9.5rem !important;
+}
+.p-b-19 {
+  padding-bottom: 9.5rem !important;
+}
+.p-l-19 {
+  padding-left: 9.5rem !important;
+}
+.p-tb-19 {
+  padding-top: 9.5rem !important;
+  padding-bottom: 9.5rem !important;
+}
+.p-lr-19 {
+  padding-left: 9.5rem !important;
+  padding-right: 9.5rem !important;
+}
+.m-20 {
+  margin: 10rem !important;
+}
+.m-t-20 {
+  margin-top: 10rem !important;
+}
+.m-r-20 {
+  margin-right: 10rem !important;
+}
+.m-b-20 {
+  margin-bottom: 10rem !important;
+}
+.m-l-20 {
+  margin-left: 10rem !important;
+}
+.m-tb-20 {
+  margin-top: 10rem !important;
+  margin-bottom: 10rem !important;
+}
+.m-lr-20 {
+  margin-left: 10rem !important;
+  margin-right: 10rem !important;
+}
+.m-neg-20 {
+  margin: -10rem !important;
+}
+.m-t-neg-20 {
+  margin-top: -10rem !important;
+}
+.m-r-neg-20 {
+  margin-right: -10rem !important;
+}
+.m-b-neg-20 {
+  margin-bottom: -10rem !important;
+}
+.m-l-neg-20 {
+  margin-left: -10rem !important;
+}
+.m-tb-neg-20 {
+  margin-top: -10rem !important;
+  margin-bottom: -10rem !important;
+}
+.m-lr-neg-20 {
+  margin-left: -10rem !important;
+  margin-right: -10rem !important;
+}
+.p-20 {
+  padding: 10rem !important;
+}
+.p-t-20 {
+  padding-top: 10rem !important;
+}
+.p-r-20 {
+  padding-right: 10rem !important;
+}
+.p-b-20 {
+  padding-bottom: 10rem !important;
+}
+.p-l-20 {
+  padding-left: 10rem !important;
+}
+.p-tb-20 {
+  padding-top: 10rem !important;
+  padding-bottom: 10rem !important;
+}
+.p-lr-20 {
+  padding-left: 10rem !important;
+  padding-right: 10rem !important;
+}
 .m-0 {
   margin: 0 !important;
 }
